--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
