--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@remixicon/react": "^4.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
+    "remixicon": "^4.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
