--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^7.2.4",
+    "ajv": "^v8.0.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17"
   }
